# OpenMT

./: History.txt  OpenMT_install_for_RaspPi.txt  README.md  ROAD_MAP.md  updateHosts.php
dashboard/www/: dashboard.html  data_query.php
db/: dvmodem.sql  modem_host.sql  openmt.sql  reflectors.sql
dsp_lib/Include/dsp/: basic_math_functions.h
modem/: CMakeLists.txt  Makefile  Modem_Host  Modem_Host.c  Modem_Host.cpp  mmdvm.c  mmdvm.cpp  mmdvm.h  modem-host.service
protocols/DMR/: CMakeLists.txt  dmr-host.service  dmr_func.c  dmr_func.h  dmr_host.c
protocols/DMR/gateway/: CMakeLists.txt  dmr-gateway.service  dmrgateway.c  dmrnet.c  dmrnet.h
protocols/DSTAR/: CMakeLists.txt  DSTAR_Service  Makefile  dstar-host.service  dstar_gps.c  dstar_gps.h  dstar_host.c  dstar_host.cpp
protocols/DSTAR/gateway/: CMakeLists.txt  DSTAR_gateway  Makefile  dstar-gateway.service  dstargateway.c  dstargateway.cpp
protocols/P25/: CMakeLists.txt  p25-host.service  p25_func.c  p25_func.h  p25_host.c
protocols/P25/gateway/: CMakeLists.txt  p25-gateway.service  p25gateway.c  p25gateway.cpp
protocols/m17/: CMakeLists.txt  M17Hosts-full.csv  M17_Service  Makefile  m17-host.service  m17_host.cpp
protocols/m17/M17/: M17Callsign.cpp  M17Constants.hpp  M17DSP.cpp  M17DSP.hpp  M17FrameDecoder.cpp  M17FrameDecoder.hpp  M17FrameEncoder.cpp  M17Golay.cpp  M17LinkSetupFrame.cpp  M17Modulator.cpp
protocols/m17/gateway/: CMakeLists.txt  M17_gateway  Makefile  m17-gateway.service  m17gateway.cpp
tools/: ADF7021.c  ADF7021.h  CCITTChecksumReverse.c  CCITTChecksumReverse.cpp  CCITTChecksumReverse.h  CRingBuffer.h  RingBuffer.c  RingBuffer.h  RingBuffer.impl.h  dsp_tools.c  dsp_tools.h  m17_c_wrapper.h  string_builder.c  string_builder.h  tools.c  tools.cpp  tools.h
